2013-01-23  Andy Buckley  <andy.buckley@cern.ch>

	* Some DESIGN doc cleanup.

	* Moving tests and their output data files into the tests/ dir.

	* Build system tweaks: adding --with args to configure for Boost and yaml-cpp, and a 'doxy' target.

2013-01-22  Andy Buckley  <andy.buckley@cern.ch>

	* Removing defunct data and knot members from GridPDF.

	* Including general doc files in Doxygen output and finessing Doxygen comments.

	* Adding Doxyfile.in with basic Doxy config.

	* Adding initial CONFIGFLAGS and CODINGSTYLE doc files.

	* AlphaS_ODE reworking -- lots needed.

2013-01-21  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an empty AlphaS_Ipol and making AlphaS_Analytic work with a smooth Lambda4/5 transition.

	* First PDF interpolation test added to testgrid.cc. Looks like it works!

	* Refactoring of the bicubic interpolator.

	* Fixed multi_array reshaping in PDFGrid loading.

	* Removing PDFSet files.

	* Disabling PWD searching due to infinite loop in calls to paths().

2013-01-20  Andy Buckley  <andy.buckley@cern.ch>

	* More alpha_s calculator evolution, mainly file splitting and adding more data members.

2013-01-19  Andy Buckley  <andy.buckley@cern.ch>

	* Making inter/extrapolator loading lazy (and neater as a consequence!)

	* Renaming PDFGrid -> GridPDF.

2013-01-13  Andy Buckley  <andy.buckley@cern.ch>

	* Using std::auto_ptr to handle Interpolator/Extrapolator
	assignment to PDFGrid, and cleaning up the interface and
	implementation a bit.

	* Using boost::shared_ptr to implement the memory handling in
	LHAGLUE. NB. not std::auto_ptr, or boost::scoped_ptr, and although
	std::unique_ptr would be ideal it requires C++11.

	* Adding alpha_s(Q2) calculation mechanism to the PDF
	interface. AlphaS calculation is not yet properly implemented and
	tested, though, cf. grid interpolation!

	* Adding src/Factories.cc to hide the implementation details /
	dependencies for factory users.

	* Added Info::metadata<bool> template specialisation to handle