@@ -1,0 +1,29 @@
+PdfDesc: A second main PDF in the EXAMPLE set
+PdfType: error
+Interpolator: cubic
+Flavors: 21
+---
+0.0    0.5    1.0
+10.0 100.0  500.0
+10.0
+7.0
+5.0
+8.0
+6.0
+4.0
+4.0
+3.0
+2.0
+---
+0.0     0.5    1.0
+500.0 750.0 1000.0
+10.0
+7.0
+5.0
+8.0
+6.0
+4.0
+4.0
+3.0
+2.0
+---
